--- a/compose.yml
+++ b/compose.yml
@@ -22,9 +22,27 @@ x-common-config: &common-config
       condition: service_healthy
   restart: on-failure
 
+# Define service specific config that includes SPRING_CONFIG_IMPORT
+x-service-config: &service-config
+  <<: *common-config
+  environment:
+    - SPRING_PROFILES_ACTIVE=dev
+    - SPRING_ZIPKIN_BASE_URL=http://zipkin:9411
+    - EUREKA_CLIENT_REGION=default
+    - EUREKA_CLIENT_AVAILABILITYZONES_DEFAULT=myzone
+    - EUREKA_CLIENT_SERVICEURL_MYZONE=http://service-discovery-container:8761/eureka
+    - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery-container:8761/eureka/
+    - EUREKA_CLIENT_REGISTER_WITH_EUREKA=true
+    - EUREKA_CLIENT_FETCH_REGISTRY=true
+    - EUREKA_INSTANCE_PREFER_IP_ADDRESS=false
+    - EUREKA_CLIENT_HEALTHCHECK_ENABLED=true
+    - EUREKA_INSTANCE_LEASE_RENEWAL_INTERVAL_IN_SECONDS=10
+    - EUREKA_INSTANCE_LEASE_EXPIRATION_DURATION_IN_SECONDS=30
+    - SPRING_CONFIG_IMPORT=optional:configserver:http://cloud-config-container:9296/
+
 # Define combined config
 x-combined-config: &combined-config
-  <<: *common-config
+  <<: *service-config
   depends_on:
     service-discovery-container:
       condition: service_healthy
@@ -82,7 +100,7 @@ services:
     <<: *combined-config
 
   order-service-container:
-    image: selimhorri/order-service-ecommerce-boot:0.1.0
+    image: esteban282/order-service-ecommerce-boot:0.1.0
     ports:
       - 8300:8300
     <<: *combined-config
