--- a/favourite-service/compose.yml
+++ b/favourite-service/compose.yml
@@ -1,12 +1,8 @@
-
 version: '3'
 services:
-  favourite-service-container:
+  favourite-service:
     image: selimhorri/favourite-service-ecommerce-boot:0.1.0
     ports:
       - 8800:8800
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-
-
-
