--- a/k8s-manifests/api-gateway/api-gateway-service.yaml
+++ b/k8s-manifests/api-gateway/api-gateway-service.yaml
@@ -5,8 +5,9 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: api-gateway-container
-  name: api-gateway-container
+    io.kompose.service: api-gateway
+  name: api-gateway
+  namespace: ecommerce-ns
 spec:
   type: NodePort # This is used to expose the service to the outside world
   ports:
@@ -14,4 +15,4 @@ spec:
       port: 8080
       targetPort: 8080
   selector:
-    io.kompose.service: api-gateway-container
+    io.kompose.service: api-gateway
