--- a/k8s-manifests/favourite-service/favourite-service-service.yaml
+++ b/k8s-manifests/favourite-service/favourite-service-service.yaml
@@ -5,12 +5,13 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: favourite-service-container
-  name: favourite-service-container
+    io.kompose.service: favourite-service
+  name: favourite-service
+  namespace: ecommerce-ns
 spec:
   ports:
     - name: "8800"
       port: 8800
       targetPort: 8800
   selector:
-    io.kompose.service: favourite-service-container
+    io.kompose.service: favourite-service
