--- a/k8s-manifests/payment-service/payment-service-service.yaml
+++ b/k8s-manifests/payment-service/payment-service-service.yaml
@@ -5,12 +5,13 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: payment-service-container
-  name: payment-service-container
+    io.kompose.service: payment-service
+  name: payment-service
+  namespace: ecommerce-ns
 spec:
   ports:
     - name: "8400"
       port: 8400
       targetPort: 8400
   selector:
-    io.kompose.service: payment-service-container
+    io.kompose.service: payment-service
