--- a/k8s-manifests/product-service/product-service-deployment.yaml
+++ b/k8s-manifests/product-service/product-service-deployment.yaml
@@ -5,59 +5,39 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: product-service-container
-  name: product-service-container
+    io.kompose.service: product-service
+  name: product-service
+  namespace: ecommerce-ns
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: product-service-container
+      io.kompose.service: product-service
   template:
     metadata:
       labels:
-        io.kompose.service: product-service-container
+        io.kompose.service: product-service
     spec:
       automountServiceAccountToken: false
       containers:
         - env:
-            - name: EUREKA_CLIENT_AVAILABILITYZONES_DEFAULT
-              value: myzone
-            - name: EUREKA_CLIENT_FETCH_REGISTRY
-              value: "true"
-            - name: EUREKA_CLIENT_HEALTHCHECK_ENABLED
-              value: "true"
-            - name: EUREKA_CLIENT_REGION
-              value: default
-            - name: EUREKA_CLIENT_REGISTER_WITH_EUREKA
-              value: "true"
-            - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
-              value: http://service-discovery-container:8761/eureka/
-            - name: EUREKA_CLIENT_SERVICEURL_MYZONE
-              value: http://service-discovery-container:8761/eureka
-            - name: EUREKA_INSTANCE_LEASE_EXPIRATION_DURATION_IN_SECONDS
-              value: "30"
-            - name: EUREKA_INSTANCE_LEASE_RENEWAL_INTERVAL_IN_SECONDS
-              value: "10"
-            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
-              value: "false"
             - name: SPRING_CONFIG_IMPORT
-              value: optional:configserver:http://cloud-config-container:9296/
-            - name: SPRING_PROFILES_ACTIVE
-              value: dev
-            - name: SPRING_ZIPKIN_BASE_URL
-              value: http://zipkin:9411
+              value: optional:configserver:http://cloud-config.ecommerce-ns.svc.cluster.local:9296/
+          envFrom:
+            - configMapRef:
+                name: common-environment-variables
           image: selimhorri/product-service-ecommerce-boot:0.1.0
-          name: product-service-container
+          name: product-service
           ports:
             - containerPort: 8500
               protocol: TCP
           resources:
             requests:
-              cpu: "200m"
-              memory: "128Mi"
+              memory: "384Mi"
+              cpu: "250m"
               ephemeral-storage: "1Gi"
             limits:
+              memory: "512Mi"
               cpu: "500m"
-              memory: "1Gi"
               ephemeral-storage: "2Gi"
       restartPolicy: Always 
