--- a/k8s-manifests/proxy-client/proxy-client-service.yaml
+++ b/k8s-manifests/proxy-client/proxy-client-service.yaml
@@ -5,12 +5,13 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: proxy-client-container
-  name: proxy-client-container
+    io.kompose.service: proxy-client
+  name: proxy-client
+  namespace: ecommerce-ns
 spec:
   ports:
     - name: "8900"
       port: 8900
       targetPort: 8900
   selector:
-    io.kompose.service: proxy-client-container
+    io.kompose.service: proxy-client
