--- a/k8s-manifests/service-discovery/service-discovery-service.yaml
+++ b/k8s-manifests/service-discovery/service-discovery-service.yaml
@@ -5,12 +5,13 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: service-discovery-container
-  name: service-discovery-container
+    io.kompose.service: service-discovery
+  name: service-discovery
+  namespace: ecommerce-ns
 spec:
   ports:
     - name: "8761"
       port: 8761
       targetPort: 8761
   selector:
-    io.kompose.service: service-discovery-container
+    io.kompose.service: service-discovery
