--- a/k8s-manifests/user-service/user-service-service.yaml
+++ b/k8s-manifests/user-service/user-service-service.yaml
@@ -5,12 +5,13 @@ metadata:
     kompose.cmd: kompose convert -f compose.yml -o k8s-manifests/
     kompose.version: 1.36.0 (ae2a39403)
   labels:
-    io.kompose.service: user-service-container
-  name: user-service-container
+    io.kompose.service: user-service
+  name: user-service
+  namespace: ecommerce-ns
 spec:
   ports:
     - name: "8700"
       port: 8700
       targetPort: 8700
   selector:
-    io.kompose.service: user-service-container
+    io.kompose.service: user-service
