--- a/k8s-manifests/zipkin/zipkin-deployment.yaml
+++ b/k8s-manifests/zipkin/zipkin-deployment.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     io.kompose.service: zipkin
   name: zipkin
+  namespace: ecommerce-ns
 spec:
   replicas: 1
   selector:
@@ -35,7 +36,7 @@ spec:
               drop: ["ALL"]
           resources:
             requests:
-              memory: "64Mi"
+              memory: "128Mi"
               cpu: "250m"
               ephemeral-storage: "1Gi"
             limits:
