--- a/k8s-manifests/zipkin/zipkin-service.yaml
+++ b/k8s-manifests/zipkin/zipkin-service.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     io.kompose.service: zipkin
   name: zipkin
+  namespace: ecommerce-ns
 spec:
   type: NodePort # This is used to expose the service to the outside world
   ports:
