--- a/proxy-client/compose.yml
+++ b/proxy-client/compose.yml
@@ -1,12 +1,8 @@
-
 version: '3'
 services:
-  auth-service-container:
+  auth-service:
     image: selimhorri/proxy-client-ecommerce-boot:0.1.0
     ports:
       - 8900:8900
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-
-
-
