--- a/service-discovery/compose.yml
+++ b/service-discovery/compose.yml
@@ -1,12 +1,8 @@
-
 version: '3'
 services:
-  service-discovery-container:
+  service-discovery:
     image: selimhorri/service-discovery-ecommerce-boot:0.1.0
     ports:
       - 8761:8761
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-
-
-
