--- a/k8s-manifests/cloud-config/cloud-config-deployment.yaml
+++ b/k8s-manifests/cloud-config/cloud-config-deployment.yaml
@@ -23,18 +23,34 @@ spec:
         - envFrom:
             - configMapRef:
                 name: common-environment-variables
-          image: selimhorri/cloud-config-ecommerce-boot:0.1.0
+          image: esteban282/cloud-config-ecommerce-boot:0.1.0
           name: cloud-config
           ports:
             - containerPort: 9296
               protocol: TCP
           resources:
             requests:
-              memory: "512Mi"
+              memory: "256Mi"
               cpu: "250m"
-              ephemeral-storage: "1Gi"
+              ephemeral-storage: "512Mi"
             limits:
               memory: "768Mi"
               cpu: "500m"
-              ephemeral-storage: "2Gi"
+              ephemeral-storage: "1Gi"
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 9296
+            initialDelaySeconds: 120
+            periodSeconds: 15
+            timeoutSeconds: 3
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 9296
+            initialDelaySeconds: 150
+            periodSeconds: 30
+            timeoutSeconds: 3
+            failureThreshold: 3
       restartPolicy: Always 
