--- a/k8s-manifests/order-service/order-service-deployment.yaml
+++ b/k8s-manifests/order-service/order-service-deployment.yaml
@@ -35,11 +35,11 @@ spec:
             requests:
               memory: "384Mi"
               cpu: "250m"
-              ephemeral-storage: "1Gi"
+              ephemeral-storage: "512Mi"
             limits:
               memory: "512Mi"
               cpu: "500m"
-              ephemeral-storage: "2Gi"
+              ephemeral-storage: "1Gi"
           readinessProbe:
             httpGet:
               path: /order-service/actuator/health
