--- a/k8s-manifests/product-service/product-service-deployment.yaml
+++ b/k8s-manifests/product-service/product-service-deployment.yaml
@@ -26,7 +26,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: common-environment-variables
-          image: selimhorri/product-service-ecommerce-boot:0.1.0
+          image: esteban282/product-service-ecommerce-boot:0.1.0
           name: product-service
           ports:
             - containerPort: 8500
@@ -35,9 +35,25 @@ spec:
             requests:
               memory: "384Mi"
               cpu: "250m"
-              ephemeral-storage: "1Gi"
+              ephemeral-storage: "512Mi"
             limits:
               memory: "512Mi"
               cpu: "500m"
-              ephemeral-storage: "2Gi"
+              ephemeral-storage: "1Gi"
+          readinessProbe:
+            httpGet:
+              path: /product-service/actuator/health
+              port: 8500
+            initialDelaySeconds: 120
+            periodSeconds: 15
+            timeoutSeconds: 3
+            failureThreshold: 6
+          livenessProbe:
+            httpGet:
+              path: /product-service/actuator/health
+              port: 8500
+            initialDelaySeconds: 150
+            periodSeconds: 30
+            timeoutSeconds: 3
+            failureThreshold: 3
       restartPolicy: Always 
