--- a/k8s-manifests/zipkin/zipkin-deployment.yaml
+++ b/k8s-manifests/zipkin/zipkin-deployment.yaml
@@ -38,11 +38,11 @@ spec:
             requests:
               memory: "128Mi"
               cpu: "250m"
-              ephemeral-storage: "1Gi"
+              ephemeral-storage: "512Mi"
             limits:
               memory: "512Mi"
               cpu: "500m"
-              ephemeral-storage: "2Gi"
+              ephemeral-storage: "1Gi"
           livenessProbe:
             exec:
               command:
