--- a/payment-service/Dockerfile
+++ b/payment-service/Dockerfile
@@ -1,38 +1,33 @@
-FROM maven:3.8.4-openjdk-11-slim AS build
-WORKDIR /app
-
-COPY pom.xml ./
-RUN mvn dependency:go-offline -B
-
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM openjdk:11-jre-slim
-
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+FROM eclipse-temurin:11-jre-alpine
 
 ARG PROJECT_VERSION=0.1.0
-ARG ENVIRONMENT=dev
-ARG USER_ID=1001
-ARG GROUP_ID=1001
+ARG JAR_FILE=target/payment-service-v${PROJECT_VERSION}.jar
 
-ENV SPRING_PROFILES_ACTIVE=${ENVIRONMENT}
-ENV JAVA_OPTS="-Xmx512m -Xms256m -XX:+UseG1GC -XX:+UseContainerSupport"
-ENV SERVER_PORT=8400
+# Create app directory
+WORKDIR /app
 
-RUN groupadd -g ${GROUP_ID} appuser && \
-    useradd -r -u ${USER_ID} -g appuser appuser && \
-    mkdir -p /home/app && \
-    chown -R appuser:appuser /home/app
+# Add a non-root user to run the application
+RUN addgroup -S spring && adduser -S spring -G spring
 
-WORKDIR /home/app
-USER appuser
+# Environment variables
+ENV SPRING_PROFILES_ACTIVE=dev
+ENV JAVA_OPTS="-Xms256m -Xmx512m -XX:+UseG1GC -XX:+UseContainerSupport"
+ENV EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery:8761/eureka/
+ENV SPRING_CLOUD_CONFIG_URI=http://cloud-config:9296
+ENV ORDER_SERVICE_HOST=http://order-service:8300
 
-COPY --from=build --chown=appuser:appuser /app/target/payment-service-v${PROJECT_VERSION}.jar payment-service.jar
+# Copy the JAR file
+COPY ${JAR_FILE} app.jar
 
-EXPOSE ${SERVER_PORT}
+# Change ownership to spring user
+RUN chown -R spring:spring /app
+USER spring
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:${SERVER_PORT}/actuator/health || exit 1
+# Expose port
+EXPOSE 8400
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Dspring.profiles.active=$SPRING_PROFILES_ACTIVE -Dserver.port=$SERVER_PORT -Dmanagement.server.port=$SERVER_PORT -jar payment-service.jar"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD wget --no-verbose --tries=1 --spider http://localhost:8400/payment-service/actuator/health || exit 1
+
+# Run the jar
+ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE} -jar app.jar"]
