--- a/k8s-manifests/api-gateway/api-gateway-deployment.yaml
+++ b/k8s-manifests/api-gateway/api-gateway-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: api-gateway
   name: api-gateway
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -22,7 +22,9 @@ spec:
       containers:
         - env:
             - name: SPRING_CONFIG_IMPORT # Specific to this service
-              value: optional:configserver:http://cloud-config.ecommerce-ns.svc.cluster.local:9296/
+              value: optional:configserver:http://cloud-config.dev.svc.cluster.local:9296/
+            - name: EUREKA_INSTANCE_HOSTNAME
+              value: api-gateway
           envFrom:
             - configMapRef:
                 name: common-environment-variables
