--- a/k8s-manifests/api-gateway/api-gateway-service.yaml
+++ b/k8s-manifests/api-gateway/api-gateway-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: api-gateway
   name: api-gateway
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   type: NodePort # This is used to expose the service to the outside world
   ports:
