--- a/k8s-manifests/cloud-config/cloud-config-deployment.yaml
+++ b/k8s-manifests/cloud-config/cloud-config-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: cloud-config
   name: cloud-config
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -20,7 +20,10 @@ spec:
     spec:
       automountServiceAccountToken: false
       containers:
-        - envFrom:
+        - env:
+            - name: EUREKA_INSTANCE_HOSTNAME
+              value: cloud-config
+          envFrom:
             - configMapRef:
                 name: common-environment-variables
           image: esteban282/cloud-config-ecommerce-boot:0.1.0
@@ -37,20 +40,4 @@ spec:
               memory: "768Mi"
               cpu: "500m"
               ephemeral-storage: "1Gi"
-          readinessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 9296
-            initialDelaySeconds: 120
-            periodSeconds: 15
-            timeoutSeconds: 3
-            failureThreshold: 6
-          livenessProbe:
-            httpGet:
-              path: /actuator/health
-              port: 9296
-            initialDelaySeconds: 150
-            periodSeconds: 30
-            timeoutSeconds: 3
-            failureThreshold: 3
       restartPolicy: Always 
