--- a/k8s-manifests/cloud-config/cloud-config-service.yaml
+++ b/k8s-manifests/cloud-config/cloud-config-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: cloud-config
   name: cloud-config
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "9296"
