--- a/k8s-manifests/favourite-service/favourite-service-service.yaml
+++ b/k8s-manifests/favourite-service/favourite-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: favourite-service
   name: favourite-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8800"
