--- a/k8s-manifests/order-service/order-service-service.yaml
+++ b/k8s-manifests/order-service/order-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: order-service
   name: order-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8300"
