--- a/k8s-manifests/payment-service/payment-service-service.yaml
+++ b/k8s-manifests/payment-service/payment-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: payment-service
   name: payment-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8400"
