--- a/k8s-manifests/product-service/product-service-service.yaml
+++ b/k8s-manifests/product-service/product-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: product-service
   name: product-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8500"
