--- a/k8s-manifests/proxy-client/proxy-client-service.yaml
+++ b/k8s-manifests/proxy-client/proxy-client-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: proxy-client
   name: proxy-client
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8900"
