--- a/k8s-manifests/service-discovery/service-discovery-deployment.yaml
+++ b/k8s-manifests/service-discovery/service-discovery-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: service-discovery
   name: service-discovery
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -25,7 +25,9 @@ spec:
       containers:
         - env:
             - name: EUREKA_INSTANCE
-              value: service-discovery.ecommerce-ns.svc.cluster.local
+              value: service-discovery.dev.svc.cluster.local
+            - name: EUREKA_INSTANCE_HOSTNAME
+              value: service-discovery
           envFrom:
             - configMapRef:
                 name: common-environment-variables
