--- a/k8s-manifests/service-discovery/service-discovery-service.yaml
+++ b/k8s-manifests/service-discovery/service-discovery-service.yaml
@@ -7,8 +7,9 @@ metadata:
   labels:
     io.kompose.service: service-discovery
   name: service-discovery
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
+  type: NodePort # This is used to expose the service to the outside worlds
   ports:
     - name: "8761"
       port: 8761
