--- a/k8s-manifests/shipping-service/shipping-service-service.yaml
+++ b/k8s-manifests/shipping-service/shipping-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: shipping-service
   name: shipping-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8600"
