--- a/k8s-manifests/user-service/user-service-service.yaml
+++ b/k8s-manifests/user-service/user-service-service.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: user-service
   name: user-service
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   ports:
     - name: "8700"
