--- a/k8s-manifests/zipkin/zipkin-deployment.yaml
+++ b/k8s-manifests/zipkin/zipkin-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     io.kompose.service: zipkin
   name: zipkin
-  namespace: ecommerce-ns
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -27,7 +27,10 @@ spec:
         runAsUser: 1000
         fsGroup: 1000
       containers:
-        - image: openzipkin/zipkin:3.5.1
+        - env:
+            - name: EUREKA_INSTANCE_HOSTNAME
+              value: zipkin
+          image: openzipkin/zipkin:3.5.1
           name: zipkin
           securityContext:
             allowPrivilegeEscalation: false
