feat(tests): added unit tests

--- a/cloud-config/Dockerfile
+++ b/cloud-config/Dockerfile
@@ -1,31 +1,38 @@
-FROM eclipse-temurin:11-jre-alpine
-
-ARG PROJECT_VERSION=0.1.0
-ARG JAR_FILE=target/cloud-config-v${PROJECT_VERSION}.jar
-
-# Create app directory
+FROM maven:3.8.4-openjdk-11-slim AS build
 WORKDIR /app
 
-# Add a non-root user to run the application
-RUN addgroup -S spring && adduser -S spring -G spring
+COPY pom.xml ./
+RUN mvn dependency:go-offline -B
 
-# Environment variables
-ENV SPRING_PROFILES_ACTIVE=dev
-ENV JAVA_OPTS="-Xms256m -Xmx512m -XX:+UseG1GC -XX:+UseContainerSupport"
-ENV EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://service-discovery:8761/eureka/
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-# Copy the JAR file
-COPY ${JAR_FILE} app.jar
+FROM openjdk:11-jre-slim
 
-# Change ownership to spring user
-RUN chown -R spring:spring /app
-USER spring
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-# Expose port
-EXPOSE 9296
+ARG PROJECT_VERSION=0.1.0
+ARG ENVIRONMENT=dev
+ARG USER_ID=1001
+ARG GROUP_ID=1001
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --retries=3 CMD wget --no-verbose --tries=1 --spider http://localhost:9296/actuator/health || exit 1
+ENV SPRING_PROFILES_ACTIVE=${ENVIRONMENT}
+ENV JAVA_OPTS="-Xmx512m -Xms256m -XX:+UseG1GC -XX:+UseContainerSupport"
+ENV SERVER_PORT=9296
 
-# Run the jar
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE} -jar app.jar"]
+RUN groupadd -g ${GROUP_ID} appuser && \
+    useradd -r -u ${USER_ID} -g appuser appuser && \
+    mkdir -p /home/app && \
+    chown -R appuser:appuser /home/app
+
+WORKDIR /home/app
+USER appuser
+
+COPY --from=build --chown=appuser:appuser /app/target/cloud-config-v${PROJECT_VERSION}.jar cloud-config.jar
+
+EXPOSE ${SERVER_PORT}
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+  CMD curl -f http://localhost:${SERVER_PORT}/actuator/health || exit 1
+
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Dspring.profiles.active=$SPRING_PROFILES_ACTIVE -Dserver.port=$SERVER_PORT -Dmanagement.server.port=$SERVER_PORT -jar cloud-config.jar"]
