--- a/jenkins-compose.yml
+++ b/jenkins-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   jenkins:
     build:
@@ -11,7 +9,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - ~/.kube/minikube-config:/var/jenkins_home/.kube/config
+      - ~/.kube/config:/var/jenkins_home/.kube/config
     # networks:
     #   - microservices-network
     environment:
