feat: jdk 11 added to jenkins

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update && \
     apt-get install -y docker-ce-cli && \
     curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
     install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && \
-    rm -rf /var/lib/apt/lists/*
+    mkdir -p /opt && \
+    curl -L https://github.com/adoptium/temurin11-binaries/releases/download/jdk-11.0.23+9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.23_9.tar.gz | tar -xz -C /opt && \
+    mv /opt/jdk-11.0.23+9 /opt/jdk-11 && \
+    rm -rf /var/lib/apt/lists/* 
 USER jenkins
 RUN jenkins-plugin-cli --plugins "blueocean docker-workflow"
